# 35000x-faster-subset-sum-algorithm-n70

./: .gitignore  CITATION.cff  LICENSE  README.md  Z++.py  Z_plus_plus_gui.py  algorithm.cmd  install.cmd  install.ps1  install.sh  z_colab_benchmark.py
benchmarks/: TEST_DATA.md  _wr_fast_v51.py  _wr_world_record_v51.py  bench_n80_n140.py  run_light.py  run_remaining.py  test_all_65.py
docs/: _config.yml  index.html
jnh1.cnf/: 1.py
scripts/: install_command.ps1  path_helper.py  setup.ps1  setup.sh
zpp_rust/: .gitignore  Cargo.toml  README.md  ROADMAP.md  install.ps1  install.sh
zpp_rust/.cargo/: config.toml
zpp_rust/src/: bitset.rs  controller.rs  gui.rs  knapsack.rs  learning.rs  lib.rs  main.rs  preprocess.rs  profile.rs  scheduler.rs  settings.rs  structure.rs  timing.rs
zpp_rust/src/engines/: adaptive_funnel.rs  apde.rs  beam.rs  bitset_dp.rs  buint_bridge.rs  cascade_filter.rs  column_sat.rs  decompose.rs  digit_filter.rs  distributed_solver.rs  dual_collapse.rs  gdep.rs  greedy_plus.rs  group_decompose.rs  hard_u128.rs  hgj.rs  micro_decompose.rs  mitm.rs  mod.rs  pmas.rs  quantum_grover.rs  residue.rs  schroeppel_shamir.rs  split_solver.rs  tiny_brute.rs  turbospec.rs  unified_solver.rs
