[package]
name = "zpp"
version = "1.1.0"
edition = "2021"
authors = ["Rehan (Independent Researcher)"]
description = "Z++ Ultimate Engine — Portfolio-based Subset Sum Solver"

[[bin]]
name = "zpp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debuginfo]
inherits = "release"
strip = false
debug = true

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
cpu-time = "1.0"
dashmap = "6.1"
